--- a/tools/connect-four.html
+++ b/tools/connect-four.html
@@ -27,7 +27,7 @@
     </div>
     
     <div style="margin-top: 20px;"></div>
-    <input type="button" onclick="start()" value="START"></input>
+    <input type="button" onclick="start()" value="START" class="btn btn-primary"></input>
     <div style="margin-top: 20px;"></div>
     <canvas class="bg-blue" style="width: 100%; height: 1000px;"></canvas>
     <img id="tile" src="/imgs/tile.png" style="display: none;" />
