--- a/tools/vigenere.html
+++ b/tools/vigenere.html
@@ -19,6 +19,12 @@
     
     <p>Encrypted Text:</p>
     <textarea  id="vign1_d" rows="4" cols="50"></textarea>
+
+    <div style="margin-top: 20px;"></div>
+   <div class="table-responsive">
+   <table class="table table-bordered table-responsive" id= "vign1">
+   </table>
+   </div>
   </div>
     
   </form>
